2008-06-21  Johan Dahlin  <jdahlin@async.com.br>

    * *.[ch]: Include "config.h" instead of <config.h>
    Command used:
    find -name \*.[ch]|xargs perl -p -i -e 's/^#include <config.h>/#include "config.h"/g'
    Rubberstamped by Mitch

2008-06-20  Sebastian Dröge  <slomo@circular-chaos.org>

	Bug 316221 - G_LOCK warns about breaking strict-aliasing rules

	* configure.in:
	* glib/gthread.h: Revert previous patch as it doesn't improve the
	situation and results in other warnings.

2008-06-16  Christian Persch  <chpe@gnome.org>

	Bug 539123 – annotate g_d[n]gettext with G_GNUC_FORMAT

	* glib/gstrfuncs.h:
	* glib/glib.symbols: Annotate some functions with G_GNUC_FORMAT. 

2008-06-19  Tor Lillqvist  <tml@novell.com>

	Bug 539074 - Cannot get exit status with g_spawn_command_line_sync()

	* glib/gspawn-win32-helper.c (main): Write also the exit status of
	the spawned process to the error report pipe. Patch by Hiroyuki
	Ikezoe.

2008-06-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 535949 – annotate g_strip_context and g_dpgettext with
	G_GNUC_FORMAT

	* glib/gstrfuncs.h:
	* glib/glib.symbols: Annotate some functions with G_GNUC_FORMAT.
	Patch by Christian Persch

2008-06-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 539067 – The document g_io_channel_win32_new_fd() says that "Your
	code should call only g_io_channel_read()." but gio_channel_read() is
	deprecated

	* glib/giochannel.h: Fix a reference in a comment
	Patch by Hiroyuki Ikezoe 

2008-06-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 537635 – Corrections and improvements to
	g_time_val_from_iso8601()/g_time_val_to_iso8601()

	* glib/gtimer.c (g_time_val_from_iso8601): set tv_usec to 0 rather 
	than 1 when a fraction of a second is not specified
	(g_time_val_from_iso8601): calculate a fraction of a second
	correctly even in case it does not happen to consist of exactly 
	six digits; do not allow random data after the ISO 8601 string,
	only whitespace