@@ -1,3 +1,8 @@
+2008-06-22  Stefan Kost  <ensonic@users.sf.net>
+
+	* glib/gurifuncs.c:
+	  Fix markup in comment.
+
 2008-06-21  Johan Dahlin  <jdahlin@async.com.br>
 
     * *.[ch]: Include "config.h" instead of <config.h>
